--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.6.0",
     "next": "9.5.5",
     "next-auth": "^4.0.5",
+    "next-auth-client": "^1.5.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-markdown": "5.0.2"
   },
   "devDependencies": {
-    "@types/next-auth": "3.1.14",
+    "@types/next-auth": "^3.1.14",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
     "prisma": "^3.6.0",
