--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "hello-next",
-  "version": "1.0.0",
-  "description": "",
+  "name": "next-app-blog",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
     "@prisma/client": "^3.6.0",
-    "next": "9.5.5",
+    "next": "12.0.7",
     "next-auth": "^4.0.5",
-    "next-auth-client": "^1.5.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-markdown": "5.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.1.1"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.1.14",
-    "@types/node": "14.14.6",
-    "@types/react": "16.9.56",
+    "@types/node": "17.0.0",
+    "@types/react": "17.0.37",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
     "prisma": "^3.6.0",
-    "typescript": "4.0.5"
+    "typescript": "4.5.4"
   }
 }
